Added pages for create and edit functions, added functionality for buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <nav class="nav-container">
-          <a href="#" class="nav__name"><h4>Christmas Fair</h4></a>
+          <a href="index.html" class="nav__name"><h4>Christmas Fair</h4></a>
           <form class="nav__search" id="search_form">
             <input
               class="input-field nav__search-input"
@@ -46,7 +46,7 @@
           </aside>
           <div class="main__items">
             <div class="main__buttons">
-              <button class="button main__buttons-create">Create</button>
+              <a class="button main__buttons-create" href="create.html">Create</a>
               <button class="button main__buttons-deleteall">Delete All</button>
             </div>
             <div class="main__items-container" id="items_container">
@@ -74,6 +74,6 @@
         </div>
       </div>
     </section>
-    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
